--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@ color: #666666; }
 border-radius: 0px 0px 3px 3px; }
 #spinner { height: 300px } .post {
 *zoom: 1;
--webkit-transition: all 300ms 0ms; -webkit-transition-delay: ease-in; -moz-transition: all 300ms 0ms ease-in; -o-transition: all 300ms 0ms ease-in; transition: all 300ms 0ms ease-in; position: relative;
-opacity: 1;
+-webkit-transition: all 300ms 0ms; -webkit-transition-delay: ease-in; -moz-transition: all 300ms 0ms ease-in; -o-transition: all 300ms 0ms ease-in; transition: all 300ms 0ms ease-in; position: relative; opacity: 1;
 }
 .post:before, .post:after {
 content: "";
@@ -31,11 +30,7 @@ display: inline-block; color: #aaaaaa;
 }
 .post .post-content p { margin: 0 } .post .discuss {
 display: block; float: right;
-￼
-￼Commit 2-3
-Re-arranged file structure.
-View on GitHub Launch Instance
-￼￼
+
 margin-top: 7px; }
 .comments { list-style-type: none; margin: 0;
 }
